Cleaned up some layout issues on the HomePage by improving and adding new style classes.

--- a/src/DVN-web/web/resources/stylesheet.css
+++ b/src/DVN-web/web/resources/stylesheet.css
@@ -704,6 +704,7 @@ a.dvnHmpgGroupCreateLink:hover, a.dvnHmpgGroupCreateLink:active {
     margin-top: .25em;
     border: 1px solid #dcdddf;
     border-bottom: 0;
+    clear: both;
 }
 .dvnHmpgGroupTableTop {
 }
@@ -1568,8 +1569,9 @@ td.vdcEditFilesColC{
 
 
 .childRowIndentStyle {text-indent:15px;}
-.activity {width: 120px; text-align: center;}
-.activitylevelicon {vertical-align:middle; width: 48px; height: 8px; background: url(/dvn/resources/activity-icons.png) no-repeat;}
+.activityColumn {text-align: center;}
+.activity {width: 48px; margin: 0 auto;}
+.activitylevelicon {vertical-align: middle; width: 48px; height: 8px; background: url(/dvn/resources/activity-icons.png) no-repeat;}
 .al-0 {background-position: -50 0;}
 .al-1 {background-position: -40 0;}
 .al-2 {background-position: -30 0;}
